--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PB LINGGA GAYO</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+	<title>PB LINGGA GAYO
+	</title>
 	<style>
 		.lcolor {
 				color: #FFFFFF;
